tests/ui/issues/issue-6936.stderr
error[E0428]: the name `Foo` is defined multiple times
  --> $DIR/issue-6936.rs:5:5
   |
LL |     type Foo = ::T;
   |     --------------- previous definition of the type `Foo` here
LL |     mod Foo {}
   |     ^^^^^^^ `Foo` redefined here
   |
   = note: `Foo` must be defined only once in the type namespace of this module

error[E0428]: the name `Foo` is defined multiple times
  --> $DIR/issue-6936.rs:10:5
   |
LL |     type Foo = ::T;
   |     --------------- previous definition of the type `Foo` here
LL |     struct Foo;
   |     ^^^^^^^^^^^ `Foo` redefined here
   |
   = note: `Foo` must be defined only once in the type namespace of this module

error[E0428]: the name `Foo` is defined multiple times
  --> $DIR/issue-6936.rs:15:5
   |
LL |     type Foo = ::T;
   |     --------------- previous definition of the type `Foo` here
LL |     enum Foo {}
   |     ^^^^^^^^ `Foo` redefined here
   |
   = note: `Foo` must be defined only once in the type namespace of this module

error[E0428]: the name `Bar` is defined multiple times
  --> $DIR/issue-6936.rs:25:5
   |
LL |     type Bar<T> = T;
   |     ---------------- previous definition of the type `Bar` here
LL |     mod Bar {}
   |     ^^^^^^^ `Bar` redefined here
   |
   = note: `Bar` must be defined only once in the type namespace of this module

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0428`.
